--- a/module-admin/src/main/resources/templates/banner/bannerFormPopup.html
+++ b/module-admin/src/main/resources/templates/banner/bannerFormPopup.html
@@ -1,7 +1,7 @@
 <form id="bannerInsertFrm">
     <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content type_2">
-            <div class="modal-header">
+        <div class="modal-content-2 type_2">
+            <div class="modal-header-v2">
                 <h4 class="modal-title">배너 등록</h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"></span>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer-v2">
                 <button type="button" class="btn btn-gray m-r-5" data-bs-dismiss="modal" aria-label="Close">취소</button>
                 <button type="button" class="btn btn-primary" onclick="insertBanner();">저장</button>
             </div>
