design: FAQ관리 html 수정

--- a/module-admin/src/main/resources/templates/faq/form.html
+++ b/module-admin/src/main/resources/templates/faq/form.html
@@ -8,7 +8,7 @@
         <div class="card-block-small p-t-0">
             <div class="row">
                 <div class="col-lg-6 mb-3">
-                    <div class="mb-0 form-group">
+                    <div class="mb-0 form-group required">
                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="category"><strong>FAQ 유형</strong></label>
                         <div class="col-12">
                             <select class="form-select form-select-sm form-control-sm form-control-round custom-select" th:field="*{category.key}">
