--- a/module-admin/src/main/resources/templates/faq/view.html
+++ b/module-admin/src/main/resources/templates/faq/view.html
@@ -135,6 +135,7 @@
                         // {orderable: false, className: 'select-checkbox', targets: 0, defaultContent: ''},
                         {className: "dt-center", targets: "_all"}
                     ],
+                    stripeClasses: [],
                     pagingType: 'full_numbers',
                     lengthChange: false,
                     responsive: true,
@@ -142,7 +143,7 @@
                     destroy: true,
                     ordering: false,
                     paging: true,
-                    info: true,
+                    info: false,
                     pageLength: 10,
                     bPaginate: true,
                     bAutoWidth: true,
@@ -174,10 +175,10 @@
                         {
                             render: function (data, type, row) {
                                 if (!!row.isFirst) {
-                                    return `<button class="btn btn-sm btn-transparent" data-id="${row.id}" id="ordDownBtn">▼</button>`;
+                                    return `<button class="btn btn-sm btn-transparent btn-icon" data-id="${row.id}" id="ordDownBtn">▼</button>`;
                                 } else {
-                                    return `<button class="btn btn-sm btn-transparent" data-id="${row.id}" id="ordUpBtn">▲</button> &nbsp;
-                                            <button class="btn btn-sm btn-transparent" data-id="${row.id}" id="ordDownBtn">▼</button>`
+                                    return `<button class="btn btn-sm btn-transparent btn-icon" data-id="${row.id}" id="ordUpBtn">▲</button> &nbsp;
+                                            <button class="btn btn-sm btn-transparent btn-icon" data-id="${row.id}" id="ordDownBtn">▼</button>`
                                 }
                             }
                         },
