design: 회원관리 datatables 수정

--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -146,7 +146,7 @@
                     destroy: true,
                     ordering: false,
                     paging: true,
-                    info: true,
+                    info: false,
                     pageLength: 10,
                     bPaginate: true,
                     bAutoWidth: true,
@@ -188,8 +188,6 @@
                     language: {
                         search: '검색',
                         emptyTable: '데이터가 없습니다.',
-                        info: '_START_부터 _END_까지 / 총데이터 : _TOTAL_',
-                        infoEmpty: '데이터 0 부터 0 까지 / 총데이터 : 0',
                         lengthMenu: '보기',
                         loadingRecords: '로딩중..',
                     },
