design: 역할등록 필수값 class 추가

--- a/module-admin/src/main/resources/templates/roles/roleView.html
+++ b/module-admin/src/main/resources/templates/roles/roleView.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-3 form-group row">
+                    <div class="mb-3 form-group row required">
                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="name"><strong>역할명</strong></label>
                         <p class="text-warning m-b-0">* 역할명은 "ROLE_"를 접두사로 가져야합니다.</p>
                         <div class="col-sm-12">
